--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                     <div class="col-lg-6">
                         <div class="header-left">
                             <div class="header-thumbnail">
-                                <img src="assets/lakhan6.jpg" alt="personal_portfolio">
+                                <img src="assets/lakhan8.jpg" alt="personal_portfolio">
                             </div>
                             <div class="header-info-content">
                                 <h4 class="title">Lakhan Dewangan</h4>
@@ -150,7 +150,7 @@
                                                                 <h2 class="title small-h2">On a Mission to Mentor 100 Students</h2>
                                                             </div>
                                                             <p class="discription color-body-white">
-                                                                <b>India was the leader in Call Centers then IT services now it's going to be a Software Hub.</b>
+                                                                <b>India was the leader in Call Centers followed by IT services now it's going to be a Software Hub.</b>
                                                             </p>
                                                             <p class="discription color-body-white">
                                                                 I'm a software engineer running a small company called
@@ -371,7 +371,7 @@
                                                                                 <ul>
                                                                                     <li>Let's learn how to create a website.</li>
                                                                                     <li>Learn CSS, HTML, Basic Javascript, and Python for website building.</li>
-                                                                                    <li>I'll guide you to the best internet resources for fast learning.</li>
+                                                                                    <li>We'll guide you to the best internet resources for fast learning.</li>
                                                                                     <li>Share tips and tricks for quick learning and problem-solving.</li>
                                                                                     <li>At the end, we'll create a simple dynamic website using what we've learned.</li>
                                                                                 </ul>
