--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
       <div class="flex items-center gap-4">
         <div>
           <h1 class="text-3xl font-bold">Lakhan Dewangan</h1>
-          <p class="text-lg">Developer · Mentor · Trainer</p>
+          <p class="text-lg">GenAI Developer · RAG Specialist</p>
         </div>
         <button id="themeToggle" class="ml-4 text-white hover:text-gray-300 transition p-2 rounded-full bg-opacity-30 bg-black dark:bg-white dark:bg-opacity-10">
           <i data-feather="sun" class="hidden dark:block"></i>
@@ -99,7 +99,13 @@
         <i data-feather="mail" class="text-accent-dark dark:text-accent-light"></i><strong>Email:</strong> dewanganlakhan@gmail.com
       </div>
       <div class="dark:bg-surface-dark bg-surface-light dark:text-text-dark text-text-light p-4 rounded-lg shadow flex items-center gap-2">
-        <i data-feather="message-circle" class="text-accent-dark dark:text-accent-light"></i><strong>Telegram:</strong> lakhandewangan
+        <i data-feather="twitter" class="text-accent-dark dark:text-accent-light"></i><strong>Twitter:</strong> <a href="https://x.com/dewanganlakhan" class="hover:underline">@dewanganlakhan</a>
+      </div>
+      <div class="dark:bg-surface-dark bg-surface-light dark:text-text-dark text-text-light p-4 rounded-lg shadow flex items-center gap-2">
+        <i data-feather="github" class="text-accent-dark dark:text-accent-light"></i><strong>GitHub:</strong> <a href="https://github.com/dewanganlakhan" class="hover:underline">dewanganlakhan</a>
+      </div>
+      <div class="dark:bg-surface-dark bg-surface-light dark:text-text-dark text-text-light p-4 rounded-lg shadow flex items-center gap-2">
+        <i data-feather="hash" class="text-accent-dark dark:text-accent-light"></i><strong>Hashnode:</strong> <a href="https://hashnode.com/@lakhan01" class="hover:underline">@lakhan01</a>
       </div>
       <div class="dark:bg-surface-dark bg-surface-light dark:text-text-dark text-text-light p-4 rounded-lg shadow flex items-center gap-2">
         <i data-feather="gift" class="text-accent-dark dark:text-accent-light"></i><strong>Birthday:</strong> 07 June
